--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="daojishi_three">"重新获取"</string>
     <string name="code_msg_one">验证码已经发送</string>
     <string name="code_msg_two">验证码错误</string>
+    <string name="get_data_error">获得数据失败，请稍后重试！</string>
 
 
 </resources>
