--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,6 +17,6 @@
     <string name="code_msg_two">验证码错误</string>
     <string name="get_data_error">获得数据失败，请稍后重试！</string>
     <string name="check_new_version">检查版本,请稍后！</string>
-
+    <string name="album_all">All Photos</string>
 
 </resources>
