--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,4 +19,11 @@
     <string name="check_new_version">检查版本,请稍后！</string>
     <string name="album_all">All Photos</string>
 
+    <string name="pull_to_refresh">下拉可以刷新</string>
+    <string name="release_to_refresh">松开可以刷新</string>
+    <string name="lastUpdateTime">最近更新：%s</string>
+    <string name="load_full">已加载全部</string>
+    <string name="no_data">暂无数据</string>
+    <string name="more">加载中</string>
+
 </resources>
