--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -109,7 +109,7 @@
     <string name="book_black">通讯录黑名单</string>
     <string name="set_custom_appkey">自定义App key</string>
     <string name="set_custom_server">自定义server</string>
-    <string name="session">会话</string>
+    <string name="session">消息</string>
     <string name="address_book">通讯录</string>
     <string name="setting">设置</string>
     <string name="now_refresh_list">正在加载数据</string>
