--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,13 +34,13 @@
     <string name="button_pushtotalk">按住说话</string>
     <string name="button_send">发送</string>
     <string name="attach_smile">表情</string>
-    <string name="attach_picture">图片</string>
-    <string name="attach_take_pic">拍照</string>
+    <string name="attach_picture">相册</string>
+    <string name="attach_take_pic">拍摄</string>
     <string name="attach_location">位置</string>
     <string name="attach_video">视频</string>
     <string name="attach_file">文件</string>
-    <string name="attach_voice_call">语音电话</string>
-    <string name="attach_video_call">视频通话</string>
+    <string name="attach_voice_call">打电话</string>
+    <string name="attach_video_call">视频聊天</string>
     <string name="user_card">名片</string>
     <string name="move_up_to_cancel">手指上滑，取消发送</string>
     <string name="release_to_cancel">松开手指，取消发送</string>
