--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -102,7 +102,7 @@
     <string name="notify">新消息提醒</string>
     <string name="newnotify">接收新消息通知</string>
     <string name="voice">声音</string>
-    <string name="shake">震动</string>
+    <string name="shake">振动</string>
     <string name="chatset">聊天设置</string>
     <string name="yangshengqi">使用扬声器播放语音</string>
     <string name="push_settings">消息推送设置</string>
